# owoverview

esp/: platformio.ini
esp/include/: constants.h
esp/lib/esp32-waveshare-epd/src/: EPD.h
esp/src/: epd_handler.cpp  epd_handler.h  fetcher.cpp  fetcher.h  main.cpp  server.cpp  server.h
igen/: .gitignore  Cargo.toml  config.example.toml  images.json  quotes.json
igen/assets/Wellfleet/: OFL.txt
igen/src/: calendar.rs  dash.rs  epd.rs  fonts.rs  graphics.rs  main.rs  settings.rs
igen/src/provider/: google.rs  image.rs  mod.rs  quote.rs  weather.rs
igen/src/render/: dash.rs  epd.rs  fonts.rs  mod.rs
