[package]
name = "igen"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
config = { version = "0.15.11", features = ["toml"] }
fontdue = { version = "0.9.3", features = ["std"] }
image = "0.25.6"
oauth2 = { version = "5.0.0", features = ["reqwest-blocking"] }
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
