[package]
name = "igen"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.40", features = ["std", "libc"], default-features = false }
config = { version = "0.15.11", features = ["toml"], default-features = false }
fontdue = { version = "0.9.3", features = ["std"], default-features = false }
image = { version = "0.25.6", default-features = false, features = ["png", "webp", "bmp"] }
log = { version = "0.4.27", features = ["std"] }
oauth2 = { version = "5.0.0", features = ["reqwest"], default-features = false }
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.15", features = ["json", "default-tls", "multipart"], default-features = false }
serde = { version = "1.0.219", features = ["derive", "std"], default-features = false }
serde_json = { version = "1.0.140", default-features = false, features = ["std"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "fs"] }
